src/main/java/com/nanimono/simpleoddb/executor/antlr4/OddlGrammarParser.java
package com.nanimono.simpleoddb.executor.antlr4;// Generated from OddlGrammar.g4 by ANTLR 4.7.2

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OddlGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, AS=11, CLASS=12, CREATE=13, CROSS=14, DELETE=15, DROP=16, FROM=17, 
		INSERT=18, INTO=19, SELECT=20, SELECTDEPUTY=21, UPDATE=22, VALUES=23, 
		SET=24, WHERE=25, BOOLEAN=26, CHAR=27, INT=28, LONG=29, FLOAT=30, TRUE=31, 
		FALSE=32, AND=33, OR=34, NOT=35, DOT=36, LR_BRACKET=37, RR_BRACKET=38, 
		COMMA=39, SEMI=40, EQUAL_SYMBOL=41, GREATER_SYMBOL=42, LESS_SYMBOL=43, 
		SPACE=44, DECIMAL=45, REAL=46, STRING_LITERAL=47, SIGNED_DECIMAL=48, SIGNED_REAL=49, 
		ID=50;
	public static final int
		RULE_root = 0, RULE_oddlStatements = 1, RULE_oddlStatement = 2, RULE_createSourceClass = 3, 
		RULE_createDefinitions = 4, RULE_createDefinition = 5, RULE_createDeputyClass = 6, 
		RULE_dropClass = 7, RULE_insertIntoClass = 8, RULE_valueList = 9, RULE_value = 10, 
		RULE_deleteFromClass = 11, RULE_simpleQuery = 12, RULE_crossClassQuery = 13, 
		RULE_updateObject = 14, RULE_expression = 15, RULE_emptyStatement = 16, 
		RULE_sClassName = 17, RULE_sAttr = 18, RULE_dAttr = 19, RULE_className = 20, 
		RULE_attrName = 21, RULE_attrList = 22, RULE_dataType = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "oddlStatements", "oddlStatement", "createSourceClass", "createDefinitions", 
			"createDefinition", "createDeputyClass", "dropClass", "insertIntoClass", 
			"valueList", "value", "deleteFromClass", "simpleQuery", "crossClassQuery", 
			"updateObject", "expression", "emptyStatement", "sClassName", "sAttr", 
			"dAttr", "className", "attrName", "attrList", "dataType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*'", "'/'", "'%'", "'+'", "'-'", "'<='", "'>='", "'=='", "'!='", 
			"'<>'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'.'", "'('", "')'", "','", "';'", "'='", "'>'", "'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "AS", 
			"CLASS", "CREATE", "CROSS", "DELETE", "DROP", "FROM", "INSERT", "INTO", 
			"SELECT", "SELECTDEPUTY", "UPDATE", "VALUES", "SET", "WHERE", "BOOLEAN", 
			"CHAR", "INT", "LONG", "FLOAT", "TRUE", "FALSE", "AND", "OR", "NOT", 
			"DOT", "LR_BRACKET", "RR_BRACKET", "COMMA", "SEMI", "EQUAL_SYMBOL", "GREATER_SYMBOL", 
			"LESS_SYMBOL", "SPACE", "DECIMAL", "REAL", "STRING_LITERAL", "SIGNED_DECIMAL", 
			"SIGNED_REAL", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OddlGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OddlGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(OddlGrammarParser.EOF, 0); }
		public OddlStatementsContext oddlStatements() {
			return getRuleContext(OddlStatementsContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << DELETE) | (1L << DROP) | (1L << INSERT) | (1L << SELECT) | (1L << UPDATE) | (1L << SEMI))) != 0)) {
				{
				setState(48);
				oddlStatements();
				}
			}

			setState(51);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OddlStatementsContext extends ParserRuleContext {
		public List<OddlStatementContext> oddlStatement() {
			return getRuleContexts(OddlStatementContext.class);
		}
		public OddlStatementContext oddlStatement(int i) {
			return getRuleContext(OddlStatementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(OddlGrammarParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(OddlGrammarParser.SEMI, i);
		}
		public List<EmptyStatementContext> emptyStatement() {
			return getRuleContexts(EmptyStatementContext.class);
		}
		public EmptyStatementContext emptyStatement(int i) {
			return getRuleContext(EmptyStatementContext.class,i);
		}
		public OddlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oddlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterOddlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitOddlStatements(this);
		}
	}

	public final OddlStatementsContext oddlStatements() throws RecognitionException {
		OddlStatementsContext _localctx = new OddlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_oddlStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(57);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CREATE:
				case DELETE:
				case DROP:
				case INSERT:
				case SELECT:
				case UPDATE:
					{
					setState(53);
					oddlStatement();
					setState(54);
					match(SEMI);
					}
					break;
				case SEMI:
					{
					setState(56);
					emptyStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << DELETE) | (1L << DROP) | (1L << INSERT) | (1L << SELECT) | (1L << UPDATE) | (1L << SEMI))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OddlStatementContext extends ParserRuleContext {
		public CreateSourceClassContext createSourceClass() {
			return getRuleContext(CreateSourceClassContext.class,0);
		}
		public CreateDeputyClassContext createDeputyClass() {
			return getRuleContext(CreateDeputyClassContext.class,0);
		}
		public DropClassContext dropClass() {
			return getRuleContext(DropClassContext.class,0);
		}
		public InsertIntoClassContext insertIntoClass() {
			return getRuleContext(InsertIntoClassContext.class,0);
		}
		public DeleteFromClassContext deleteFromClass() {
			return getRuleContext(DeleteFromClassContext.class,0);
		}
		public SimpleQueryContext simpleQuery() {
			return getRuleContext(SimpleQueryContext.class,0);
		}
		public CrossClassQueryContext crossClassQuery() {
			return getRuleContext(CrossClassQueryContext.class,0);
		}
		public UpdateObjectContext updateObject() {
			return getRuleContext(UpdateObjectContext.class,0);
		}
		public OddlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oddlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterOddlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitOddlStatement(this);
		}
	}

	public final OddlStatementContext oddlStatement() throws RecognitionException {
		OddlStatementContext _localctx = new OddlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_oddlStatement);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				createSourceClass();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				createDeputyClass();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				dropClass();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(64);
				insertIntoClass();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				deleteFromClass();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(66);
				simpleQuery();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(67);
				crossClassQuery();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(68);
				updateObject();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateSourceClassContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(OddlGrammarParser.CREATE, 0); }
		public TerminalNode CLASS() { return getToken(OddlGrammarParser.CLASS, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public CreateDefinitionsContext createDefinitions() {
			return getRuleContext(CreateDefinitionsContext.class,0);
		}
		public CreateSourceClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createSourceClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterCreateSourceClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitCreateSourceClass(this);
		}
	}

	public final CreateSourceClassContext createSourceClass() throws RecognitionException {
		CreateSourceClassContext _localctx = new CreateSourceClassContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createSourceClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(CREATE);
			setState(72);
			match(CLASS);
			setState(73);
			className();
			setState(74);
			createDefinitions();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDefinitionsContext extends ParserRuleContext {
		public TerminalNode LR_BRACKET() { return getToken(OddlGrammarParser.LR_BRACKET, 0); }
		public List<CreateDefinitionContext> createDefinition() {
			return getRuleContexts(CreateDefinitionContext.class);
		}
		public CreateDefinitionContext createDefinition(int i) {
			return getRuleContext(CreateDefinitionContext.class,i);
		}
		public TerminalNode RR_BRACKET() { return getToken(OddlGrammarParser.RR_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(OddlGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(OddlGrammarParser.COMMA, i);
		}
		public CreateDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterCreateDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitCreateDefinitions(this);
		}
	}

	public final CreateDefinitionsContext createDefinitions() throws RecognitionException {
		CreateDefinitionsContext _localctx = new CreateDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(LR_BRACKET);
			setState(77);
			createDefinition();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(78);
				match(COMMA);
				setState(79);
				createDefinition();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(RR_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDefinitionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(OddlGrammarParser.ID, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public CreateDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterCreateDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitCreateDefinition(this);
		}
	}

	public final CreateDefinitionContext createDefinition() throws RecognitionException {
		CreateDefinitionContext _localctx = new CreateDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_createDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(ID);
			setState(88);
			dataType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateDeputyClassContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(OddlGrammarParser.CREATE, 0); }
		public TerminalNode SELECTDEPUTY() { return getToken(OddlGrammarParser.SELECTDEPUTY, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public TerminalNode SELECT() { return getToken(OddlGrammarParser.SELECT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> AS() { return getTokens(OddlGrammarParser.AS); }
		public TerminalNode AS(int i) {
			return getToken(OddlGrammarParser.AS, i);
		}
		public List<DAttrContext> dAttr() {
			return getRuleContexts(DAttrContext.class);
		}
		public DAttrContext dAttr(int i) {
			return getRuleContext(DAttrContext.class,i);
		}
		public TerminalNode FROM() { return getToken(OddlGrammarParser.FROM, 0); }
		public SClassNameContext sClassName() {
			return getRuleContext(SClassNameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(OddlGrammarParser.WHERE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(OddlGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(OddlGrammarParser.COMMA, i);
		}
		public CreateDeputyClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createDeputyClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterCreateDeputyClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitCreateDeputyClass(this);
		}
	}

	public final CreateDeputyClassContext createDeputyClass() throws RecognitionException {
		CreateDeputyClassContext _localctx = new CreateDeputyClassContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_createDeputyClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(CREATE);
			setState(91);
			match(SELECTDEPUTY);
			setState(92);
			className();
			setState(93);
			match(SELECT);
			setState(94);
			expression(0);
			setState(95);
			match(AS);
			setState(96);
			dAttr();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(97);
				match(COMMA);
				setState(98);
				expression(0);
				setState(99);
				match(AS);
				setState(100);
				dAttr();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(FROM);
			setState(108);
			sClassName();
			setState(109);
			match(WHERE);
			setState(110);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DropClassContext extends ParserRuleContext {
		public TerminalNode DROP() { return getToken(OddlGrammarParser.DROP, 0); }
		public TerminalNode CLASS() { return getToken(OddlGrammarParser.CLASS, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public DropClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dropClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterDropClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitDropClass(this);
		}
	}

	public final DropClassContext dropClass() throws RecognitionException {
		DropClassContext _localctx = new DropClassContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dropClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(DROP);
			setState(113);
			match(CLASS);
			setState(114);
			className();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertIntoClassContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(OddlGrammarParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(OddlGrammarParser.INTO, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public TerminalNode VALUES() { return getToken(OddlGrammarParser.VALUES, 0); }
		public ValueListContext valueList() {
			return getRuleContext(ValueListContext.class,0);
		}
		public InsertIntoClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertIntoClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterInsertIntoClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitInsertIntoClass(this);
		}
	}

	public final InsertIntoClassContext insertIntoClass() throws RecognitionException {
		InsertIntoClassContext _localctx = new InsertIntoClassContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_insertIntoClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(INSERT);
			setState(117);
			match(INTO);
			setState(118);
			className();
			setState(119);
			match(VALUES);
			setState(120);
			valueList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueListContext extends ParserRuleContext {
		public TerminalNode LR_BRACKET() { return getToken(OddlGrammarParser.LR_BRACKET, 0); }
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public TerminalNode RR_BRACKET() { return getToken(OddlGrammarParser.RR_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(OddlGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(OddlGrammarParser.COMMA, i);
		}
		public ValueListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterValueList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitValueList(this);
		}
	}

	public final ValueListContext valueList() throws RecognitionException {
		ValueListContext _localctx = new ValueListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_valueList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(LR_BRACKET);
			setState(123);
			value();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(124);
				match(COMMA);
				setState(125);
				value();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(RR_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(OddlGrammarParser.STRING_LITERAL, 0); }
		public TerminalNode SIGNED_DECIMAL() { return getToken(OddlGrammarParser.SIGNED_DECIMAL, 0); }
		public TerminalNode DECIMAL() { return getToken(OddlGrammarParser.DECIMAL, 0); }
		public TerminalNode SIGNED_REAL() { return getToken(OddlGrammarParser.SIGNED_REAL, 0); }
		public TerminalNode REAL() { return getToken(OddlGrammarParser.REAL, 0); }
		public TerminalNode TRUE() { return getToken(OddlGrammarParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(OddlGrammarParser.FALSE, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OddlGrammarListener) ((OddlGrammarListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(STRING_LITERAL);
				}
				break;
			case DECIMAL:
			case SIGNED_DECIMAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				_la = _input.LA(1);
				if ( !(_la==DECIMAL || _la==SIGNED_DECIMAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case REAL:
			case SIGNED_REAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				_la = _input.LA(1);
				if ( !(_la==REAL || _la==SIGNED_REAL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				_la = _input.LA(1);
				if ( !(_la==TRUE || _la==FALSE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeleteFromClassContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(OddlGrammarParser.DELETE, 0); }
		public TerminalNode FROM() { return getToken(OddlGrammarParser.FROM, 0); }
		public ClassNameContext className() {
			return getRuleContext(ClassNameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(OddlGrammarParser.WHERE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
